--- a/.github/workflows/run_script_ubuntu.yaml
+++ b/.github/workflows/run_script_ubuntu.yaml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
       
       - name: Install pandoc
         uses: r-lib/actions/setup-pandoc@v2
@@ -45,6 +47,9 @@ jobs:
           sudo apt-get install -y libgdal-dev libgeos-dev libproj-dev libsqlite3-dev libfontconfig1-dev libcairo2-dev libharfbuzz-dev libfribidi-dev
           # sudo apt-get update
           # sudo apt-get install -y libproj-dev libgdal-dev
+          # CLEAN APT CACHES & TEMP
+          sudo apt-get clean
+          sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
           
       - uses: r-lib/actions/setup-renv@v2
           
@@ -57,6 +62,13 @@ jobs:
       - name: Run R script MV-LF
         run: Rscript --verbose script_mv-lf.R
         
+      - name: Check disk usage
+        run: |
+          echo "Disk usage:"
+          df -h
+          echo "Largest directories:"
+          du -h . | sort -h | tail -n 30
+          
       - name: Commit results
         run: |
           git config --local user.name "$GITHUB_ACTOR"
